--- a/src/App.css
+++ b/src/App.css
@@ -50,14 +50,14 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #23242a;
+    background:#04AA6D;
   }
   
   .box{
     position: relative;
     width: 380px;
     height: 500px;
-    background: #1c1c1c;
+    background: whitesmoke;
     border-radius: 8px;
     overflow: hidden;
   }
@@ -69,7 +69,7 @@
     left: -50%;
     width: 380px;
     height: 420px;
-    background: linear-gradient(0deg, transparent, #45f3ff, #45f3ff);
+    background: linear-gradient(0deg, transparent, #cf1901, #c00000);
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
   }
@@ -81,7 +81,7 @@
     left: -50%;
     width: 380px;
     height: 420px;
-    background: linear-gradient(0deg, transparent, #45f3ff, #45f3ff);
+    background: linear-gradient(0deg, transparent, #d80000, #ce0000);
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
     animation-delay: -3s;
@@ -102,14 +102,14 @@
      position: absolute;
      inset:2px;
      border-radius: 8px;
-     background: #28292d;
+     background: #82848f;
      z-index: 10;
      padding: 50px 40px;
      display: flex;
      flex-direction: column;
   }
   .form h2{
-    color: #45f3ff;
+    color: #fefeff;
     font-weight: 500;
     text-align: center;
     letter-spacing: 0.1em;
@@ -129,7 +129,7 @@
     background: transparent;
     border: none;
     outline: none;
-    color: #23242a;
+    color: #ce0000;
     font-size:  1em;
     letter-spacing: 0.05em;
     z-index: 10;
@@ -140,7 +140,7 @@
     left: 0;
     padding: 20px 0px 10px;
     font-size: 1em;
-    color: #8f8f8f;
+    color: #a80000;
     pointer-events: none;
     letter-spacing: 0.05em;
     transition: 0.5s;
@@ -149,7 +149,7 @@
   .inputBox input:valid ~ span,
   .inputBox input:focus ~ span
   {
-    color: #45f3ff;
+    color: #fcfafa;
     transform: translateX(0px) translateY(-34px);
     font-size: 0.75em;
   }
@@ -160,7 +160,7 @@
     bottom: 0;
     width: 100%;
     height: 2px;
-    background: #45f3ff;
+    background: #d9ff02;
     border-radius: 4px;
     transition: 0.5s;
     pointer-events: none;
@@ -182,19 +182,19 @@
   .links a{
     margin: 15px 0;
     font-size: 0.9em;
-    color: #8f8f8f;
+    color: #fffdfd;
     text-decoration: none;
   }
   
   .links a:hover,
   .links a:nth-child(2){
-    color: #45f3ff;
+    color: #a50000;
   }
   
   button[type="submit"]{
     border: none;
     outline: none;
-    background: #45f3ff;
+    background: #6bdb7a;
     padding: 11px 25px;
     width: 100px;
     margin-top: 10px;
@@ -288,5 +288,202 @@
     margin-left: 10%;
 }
 
-  /* ------------------------------------------------------------------------------------------------------------------------------------- */
+  /* ----------------------------------------- input box error alert -------------------------------------------------------------------------------------------- */
 
+.input-error{
+    border : 1px solid red;
+  }
+
+.homesize{
+  background: #09bd81;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #207463, #0f865f);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #47a594, #4AC29A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ }
+
+ 
+.wrapper{
+  width: 100%;
+  height: 100%;
+}
+.main-text{
+  position: absolute;
+  top: 45%;
+  left: 35%;
+  font-family: 'Lobster', cursive;
+  font-size: 5em;
+  color: rgb(155, 103, 103);
+}
+.bubble{
+  position: absolute;
+  top: 70%;
+  border-radius: 50%;
+  border: 2px solid rgba(0, 175, 23, 0.8);
+}
+.small{
+  width: 10px;
+  height: 10px;
+  left: 50%;
+  animation: flow-s 2s linear infinite;
+}
+.small-l{
+  width: 10px;
+  height: 10px;
+  left: 43%;
+  animation: flow-s-l 0.9s linear infinite;
+}
+.s-medium{
+  width: 20px;
+  height: 20px;
+  left: 43%;
+  animation: flow-s 1.3s linear infinite;
+}
+.medium{
+  width: 25px;
+  height: 25px;
+  left: 45%;
+  animation: flow-m 0.8s linear infinite;
+}
+.large{
+  width:5px;
+  height: 5px;
+  left: 57%;
+  animation: flow-l 0.7s linear infinite;
+}
+
+@keyframes flow-l {
+  0% {
+    top: 53%;
+    left: 57%;
+    opacity:0;
+  }
+  25%{
+    top: 49%;
+    left: 57.5%;
+    opacity: 1;
+  }
+  50%{
+    left: 58%;
+    opacity: 1;
+  }
+  75%{
+    left: 57.5%;
+    opacity: 1;
+  }
+  100% {
+    top: 32%;
+    left: 57%;
+    opacity: 0;
+  }
+}
+
+@keyframes flow-s {
+  0% {
+    top: 53%;
+    left: 50%;
+    opacity:0;
+  }
+  25%{
+    top: 49%;
+    left: 51%;
+    opacity: 1;
+  }
+  50%{
+    top: 45%;
+    left: 52%;
+    opacity: 1;
+  }
+  75%{
+    top: 41%;
+    left: 51%;
+    opacity: 1;
+  }
+  100% {
+    top: 37%;
+    left: 50%;
+    opacity: 0;
+  }
+}
+
+@keyframes flow-s-m {
+  0% {
+    top: 53%;
+    left: 43%;;
+    opacity:0;
+  }
+  25%{
+    top: 49%;
+    left: 42.5%;
+    opacity: 1;
+  }
+  50%{
+    top: 45%;
+    left: 42%;
+    opacity: 1;
+  }
+  75%{
+    top: 41%;
+    left: 42.5%;
+    opacity: 1;
+  }
+  100% {
+    top: 37%;
+    left: 43%;
+    opacity: 0;
+  }
+}
+
+@keyframes flow-m {
+  0% {
+    top: 53%;
+    left: 45%;;
+    opacity:0;
+  }
+  25%{
+    top: 48%;
+    left: 44.5%;
+    opacity: 1;
+  }
+  50%{
+    top: 43%;
+    left: 44%;
+    opacity: 1;
+  }
+  75%{
+    top: 38%;
+    left: 44.5%;
+    opacity: 1;
+  }
+  100% {
+    top: 33%;
+    left: 45%;
+    opacity: 0;
+  }
+}
+
+@keyframes flow-s-l {
+  0% {
+    top: 53%;
+    left: 43%;;
+    opacity:0;
+  }
+  25%{
+    top: 48%;
+    left: 43.5%;
+    opacity: 1;
+  }
+  50%{
+    top: 43%;
+    left: 44%;
+    opacity: 1;
+  }
+  75%{
+    top: 38%;
+    left: 43.5%;
+    opacity: 1;
+  }
+  100% {
+    top: 33%;
+    left: 43%;
+    opacity: 0;
+  }
+}
